Deluge 0.5.6 (xx October 2007)
  * Tray lock password is no longer stored in plain text
  * Web Interface Plugin
  * Double-clicking on a torrent opens up its containing folder
  * Fix SpeedLimiter plugin when setting upload limits
  * Fix MoveTorrent plugin when moving actively downloading torrents
  * Pause plugins while importing blocklist and resume them when finished
  * Remove TorrentPieces and disable its use
  * A whole bunch of stuff for Win32
  * Add private flag to TorrentCreator plugin
  * Use SVG for internal logo usage (except on Win32)
  * Use theme for tray icon instead of hard-coded 
  * Properly release port on shutdown
  * Inherit UPnP fixes from libtorrent
  * Use threading for everything, instead of spawnning

Deluge 0.5.5 (09 September 2007)
  * Editing a torrent's tracker list is now persistent between sessions
  * Persistence between sessions for Speed Limiter, Web Seed and Desired Ratio 
  plugins
  * New wizard to aid first-time users with configuration
  * Reorderable tabs and remember order (with exception of details tab)
  * Fix losing data and having to re-download parts
  * Fix password lock showing when main window is not hidden
  * Get rid of the plugin manager and integrate it into preferences
  * New Move torrent plugin - takes over for "move completed downloads" feature
  and provides a "Move Torrent" option when right-clicking on a torrent
  * Save column widths
  * Queue order after restart fixes.
  * Use payload instead of including protocol overhead to ease user confusion 
  of seeding torrents "downloading"
  * New Web Seed plugin for adding URLs to torrents for http seeding
  * Add FAST-extension (http://www.bittorrent.org/fast_extensions.html)

Deluge 0.5.4.1 (10 August 2007)
  * Add "Open containing folder" and "Open File" to the torrent and file 
  menu, respectively
  * Load Blocklist plugin last and have it not lock up the interface during 
  import
  * Add full allocation to preferences for clarification