@@ -1,5 +1,6 @@
 Deluge 0.5.6 (xx October 2007)
   * Tray lock password is no longer stored in plain text
+  * Update the Scheduler plugin and fix a bunch of bugs on it
   * Web Interface Plugin
   * Double-clicking on a torrent opens up its containing folder
   * Fix SpeedLimiter plugin when setting upload limits
